2013-01-18  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version): 0.0.4

	* DESCRIPTION (Depends): Increased to xts 0.9-2 now on CRAN

2013-01-16  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version): 0.0.3

	* DESCRIPTION (Depends): Increased to xts 0.9-1.2 with its new xtsAPI.h

	* src/xtsMod.cpp (RCPP_MODULE): Reflect new xtsAPI.h and new function
	names in the xts API, renamed the created R functions accordingly
	* tests/check.R: Updated to new function names
	* man/RcppXts-package.Rd: Idem

2013-01-15  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version): 0.0.2

	* DESCRIPTION (Depends): Versioned Depends: on xts to ensure we a
	version greater than 0.9-1 (currently on CRAN) with corrected init.c

	* src/xtsMod.cpp:
	  o Import stubs have been moved into xts where they belong
	  o New functions for coredata, merge, lag now that xts exports'em

	* tests/check.R: Added minimal tests for new functionality

2013-01-12  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version): 0.0.1
