@@ -1,6 +1,8 @@
 
 library(RcppXts)
 
+options("digits.secs"=6)
+
 X  <- xts(1:4, order.by=Sys.time()+0:3)
 X2 <- xts(1:4, order.by=Sys.time()+4:7)
 
@@ -13,4 +15,30 @@ stopifnot( all.equal(index(xtsTry(as.zoo(X))), index(X) ) )
 xtsRbind(X, X2, FALSE)
 xtsRbind(X, X, TRUE)
 xtsNaCheck(X)
-xtsLag(X, 2L, TRUE)
+Y <- X
+xtsLag(Y, 2L, TRUE)
+
+Y <- X
+index(Y)[2] <- index(Y)[3]
+Y
+xtsMakeIndexUnique(Y, 0.001)
+
+Y <- X
+index(Y)[2] <- index(Y)[3]
+xtsMakeUnique(Y, 0.5)
+
+X  <- xts(1:20, order.by=Sys.time()+(0:19)*60)
+xtsEndpoints(index(X), 60L, 4, TRUE)     # every fourth minute, incl last
+xtsEndpoints(index(X), 60L, 4, FALSE)    # every fourth minute
+
+xtsMerge(X, X2, c(TRUE,TRUE), TRUE, TRUE, "a", "b", TRUE, new.env(), 0)
+
+Y2 <- Y
+Y2[2] <- NA
+xtsNaOmit(Y2)
+
+## -- requires xts 0.9-6 (fixed in SVN)
+## Y2 <- X2
+## Y2[3] <- NA
+## Y2
+## xtsNaLocf(Y2, FALSE, 1, Inf)
